# Hordon13

./: .gitignore  README.md
Eclipse/.metadata/: version.ini
Presentations/Demo/: .demo_2.pdf.icloud
week-01/day-02/: file1.txt  file2.txt  file3.txt  file4.txt
week-01/day-03/AnimalsAndLegs/: main.cpp
week-01/day-03/AverageOfInput/: main.cpp
week-01/day-03/Bmi/: main.cpp
week-01/day-03/CodingHours/: main.cpp
week-01/day-03/ConditionalVaribaleMutation/: CMakeLists.txt  main.cpp
week-01/day-03/CountFromTo/: main.cpp
week-01/day-03/Cuboid/: main.cpp
week-01/day-03/DefineBasicInfo/: main.cpp
week-01/day-03/DrawChessTable/: main.cpp
week-01/day-03/DrawDiagonal/: main.cpp
week-01/day-03/DrawDiamond/: main.cpp
week-01/day-03/DrawPyramid/: main.cpp
week-01/day-03/DrawSquare/: main.cpp
week-01/day-03/DrawTriangle/: main.cpp
week-01/day-03/FavoriteNumbers/: CMakeLists.txt  main.cpp
week-01/day-03/FizzBuzz/: main.cpp
week-01/day-03/GuessTheNumber/: main.cpp
week-01/day-03/HelloMe/: main.cpp
week-01/day-03/HelloOthers/: main.cpp
week-01/day-03/HelloUser/: main.cpp
week-01/day-03/IWontCheatOnTheExams/: main.cpp
week-01/day-03/IntroduceYourself/: main.cpp
week-01/day-03/MileToKmConverter/: main.cpp
week-01/day-03/MultiplicationTable/: main.cpp
week-01/day-03/OddEven/: main.cpp
week-04/day-03/InstrumentToStringedInstruments/: BassGuitar.cpp  BassGuitar.h  CMakeLists.txt  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.cpp  Instrument.h  StringedInstrument.cpp  StringedInstrument.h  Violin.cpp  Violin.h  main.cpp
(+424 files in other folders)
